# HackCU

./: README.md  p1.json  p3.json  pr1.json  pyproject.toml
ABC/: USER_GUIDE.md  agents.json  auto_recorder.py  p2.json
ABC/abc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
ABC/cli/: display.py  main.py
ABC/dashboard/: index.html  run.py
ABC/ledger/: md_store.py  models.py
Adam/: idea.md  plan.md
Adam/agent-ledger/: .gitignore  INTEGRATION_GUIDE.md  QUICKSTART.md  README.md  demo.sh  mcp-config.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.sh  tsconfig.base.json
Adam/agent-ledger/.ledger/: ledger.db-shm  ledger.db-wal  secret.key
Jason/Hackathon/: index.html  package-lock.json  package.json  server.js  test-gemini.js
Jason/Hackathon/src/: App.css  App.jsx  index.css
Michael/: USER_GUIDE.md  auto_recorder.py  ledger.md  pyproject.toml
Michael/agentctl.egg-info/: PKG-INFO  entry_points.txt  requires.txt
Michael/cli/: display.py  main.py
Michael/cli/commands/: diff.py  log.py  pr.py  record.py  verify.py
Michael/dashboard/: agents.json  index.html  ledger.md  run.py  server.py
Michael/dashboard/scratchpad/test-llama/: 2026-03-08T15-17-58_reasoning.md  2026-03-08T15-18-40_reasoning.md
Michael/dashboard/scratchpad/tester-agent/: 2026-03-08T14-53-00_reasoning.md  2026-03-08T14-54-02_reasoning.md
Michael/ledger/: diff.py  md_store.py  models.py
agentctl.egg-info/: SOURCES.txt  top_level.txt
cli/: display.py
cli/commands/: diff.py
dashboard/: index.html
ledger/: blockchain.py
(+13 files in other folders)
