[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentctl"
version = "0.1.0"
description = "GitHub for Agents — a CLI tool for managing agent action ledgers"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "pydantic>=2",
]

[project.scripts]
agentctl = "cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "ledger*"]
